// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create and update nodes allows creating nodes 1`] = `
Object {
  "payload": Object {
    "children": Array [],
    "id": "hi",
    "internal": Object {
      "contentDigest": "hasdfljds",
      "mediaType": "test",
      "pluginOwner": "tests",
      "type": "Test",
    },
    "parent": "test",
    "pickle": true,
  },
  "plugin": undefined,
  "type": "CREATE_NODE",
}
`;

exports[`Create and update nodes allows creating nodes 2`] = `
Object {
  "hi": Object {
    "children": Array [],
    "id": "hi",
    "internal": Object {
      "contentDigest": "hasdfljds",
      "mediaType": "test",
      "pluginOwner": "tests",
      "type": "Test",
    },
    "parent": "test",
    "pickle": true,
  },
}
`;
